------------------------------------------------------------------------
r1277 | gaser | 2018-02-13 13:35:31

Changed paths:
M       CHANGES.txt
M       Contents.m
MM      cat_stat_factorial_design.m
M       html/cat.html
M       html/cat.txt
M       html/cat_starting.html
M       html/style.css

Changed: Corrected css-code for "Quick Start Guide" button in CAT12 winodw.
------------------------------------------------------------------------
r1276 | gaser | 2018-02-13 10:56:53 +0100 (Di, 13 Feb 2018) | 9 lines

Changed paths:
M       CHANGES.txt
M       Contents.m
M       html/cat.html
M       html/cat.txt
M       html/style.css

Changed: Added button to open external "Quick Start Guide" to CAT12 winodw.

------------------------------------------------------------------------
r1275 | gaser | 2018-02-12 23:00:05 +0100 (Mo, 12 Feb 2018) | 28 lines

Changed paths:
M       CAT12-Manual.docx
M       CAT12-Manual.pdf
M       CHANGES.txt
M       cat12.m
M       cat_conf_tools.m
A  +    cat_stat_check_SPM.m
        > moved from cat_stat_check_cov_SPM.m
M       cat_stat_check_cov.m
D       cat_stat_check_cov_SPM.m
        > moved to cat_stat_check_SPM.m
A       cat_stat_factorial_design.m
M       html/cat.html
M       html/cat.txt
M       html/cat_methods_FN.html
M       html/cat_orthogonality.html
M       html/cat_starting.html
M       html/style.css

(1) Changed: Use smaller font in online help and added comments where to
    synchronize with CAT12 manual.
(2) Changed: Updated CAT12 manual and online help (orthogonality check)
(3) Changed: Renamed cat_stat_check_cov_SPM.m to cat_stat_check_SPM.m.
(4) Changed: Added batch mode for checking SPM design.
(5) Changed: Added check for SPM design to basic models.
(6) Changed: Many changes to cat_stat_check_SPM.m and cat_stat_check_cov.m.
(7) Changed: Added global scaling to cat_stat_check_cov.m

------------------------------------------------------------------------