@@ -24,13 +24,13 @@
   
     <div id="content">
       <br />
-      <p align="center" style="text-align:center;">This is <b>CAT12.1 (r1276) from 2018-02-13</b><br />You can update your copy of CAT12 here: <a href="matlab:spm('alert',evalc('cat_update(1)'),'CAT Update');">Check for update</a>.<br />If you find any bug, please report them at <a href="mailto:vbmweb@gmail.com">vbmweb@gmail.com</a>.</p>
+      <p align="center" style="text-align:center;">This is <b>CAT12.1 (r1277) from 2018-02-13</b><br />You can update your copy of CAT12 here: <a href="matlab:spm('alert',evalc('cat_update(1)'),'CAT Update');">Check for update</a>.<br />If you find any bug, please report them at <a href="mailto:vbmweb@gmail.com">vbmweb@gmail.com</a>.</p>
       <h1 style="text-align:center;"><img src="images/CAT.png" width=40% height=auto alt="CAT" ></h1>
 
       <hr />
     
     <div id="button">
-      <p><a href="matlab:web(fullfile(spm('dir'),'toolbox','cat12','html','cat_starting.html'))">Open ''Quick Start Guide'' in external window</a></p>      
+      <p align="center" style="text-align:center;"><a href="matlab:web(fullfile(spm('dir'),'toolbox','cat12','html','cat_starting.html'))">Open ''Quick Start Guide'' in external window</a></p>      
     </div>
 
       <h2>Description</h2>
